[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'lsl_viewpoint'
version = '0.1.0'
description = 'LSL module for the viewpoint eyetracker.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'eye-tracker',
    'lsl',
    'labstreaminglayer',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
    'bsl==0.6.1',
    'numpy>=1.21',
    'packaging',
    'psutil',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'black',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'lsl_viewpoint[build]',
    'lsl_viewpoint[style]',
    'lsl_viewpoint[test]',
]
full = [
    'lsl_viewpoint[all]',
]

[project.urls]
homepage = 'https://github.com/fcbg-hnp-meeg/lsl-viewpoint'
documentation = 'https://github.com/fcbg-hnp-meeg/lsl-viewpoint'
source = 'https://github.com/fcbg-hnp-meeg/lsl-viewpoint'
tracker = 'https://github.com/fcbg-hnp-meeg/lsl-viewpoint/issues'

[project.scripts]
lsl_viewpoint-sys_info = 'lsl_viewpoint.commands.sys_info:run'
lsl_viewpoint = 'lsl_viewpoint.commands.lsl_viewpoint:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['lsl_viewpoint*']
exclude = ['lsl_viewpoint*tests']

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | .github
    | .ruff_cache
    | setup.py
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 39
extend_skip_glob = [
    'setup.py',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^lsl_viewpoint.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 88
extend-exclude = [
    "doc",
    "setup.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/lsl_viewpoint/_version.py',
    '**/lsl_viewpoint/commands/*',
    '**/lsl_viewpoint/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]
precision = 2
